--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card Matching Game</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/CardMatch/style.css">
 </head>
 <body>
     <div id="game-info">
@@ -19,11 +19,11 @@
     </div>
 
     <div id="card-container" class="card-container">
-        <!-- Cards will be dynamically added here -->
+       <!--Cards here-->
     </div>
 
     <div id="win-lose-container">
-
+        <!--WIn/lose here-->
     </div>
 
     <div id="button-container">
